# solana-helloworld-py

./: .gitignore  Cargo.toml  README.md
client/: accounts.py  greet.py  prepare.py  read.py
src/: lib.rs
